# leggySim

./: .gitignore  CLAUDE.md  README.md  env.py  export.py  infer_policy.py  pyproject.toml  requirements.txt
.claude/rl-training/: config.md
.claude/rl-training/scripts/: evaluate_policy.py  get_latest_run.py  init_session.sh  kill_training.sh  monitor.py  notify.sh  train.sh
.github/workflows/: deploy-viewer.yml
docs/superpowers/plans/: 2026-03-26-rl-training-skill.md  2026-04-02-generic-rl-training-skill.md  2026-04-02-parallel-training.md
docs/superpowers/specs/: 2026-03-26-rl-training-skill-design.md  2026-04-01-generic-rl-training-skill-design.md  2026-04-02-parallel-training-design.md
leggy/: config.json  robot.xml
leggy/assets/: antenna.part  antenna.stl  brd.part  cm4lite.part  femur.part  gear2__c331c3826e3aeff78bc4513233f2bf84.part  gear3__c331c3826e3aeff78bc4513233f2bf84.part  gear3__c331c3826e3aeff78bc4513233f2bf84.stl  intel_ax210_ngw_wifi_6___bt_nvme_parts.stl  kneelink.part  kneelink.stl  kneelinkl.part  kneelinkl.stl  kneelinkr.part  kneelinkr.stl  output__c331c3826e3aeff78bc4513233f2bf84.part  output_axis__c331c3826e3aeff78bc4513233f2bf84.part  output_support__c331c3826e3aeff78bc4513233f2bf84.part  pcb_support__c331c3826e3aeff78bc4513233f2bf84.stl  rod.part  rotor.part  short_axe__c331c3826e3aeff78bc4513233f2bf84.stl  spacer__c331c3826e3aeff78bc4513233f2bf84.stl  spacer_small__c331c3826e3aeff78bc4513233f2bf84.part  spacer_small__c331c3826e3aeff78bc4513233f2bf84.stl  spring__c331c3826e3aeff78bc4513233f2bf84.part  stator.part  stator.stl  tibia.part  trunclink.part
scripts/: evaluate_policy.py  export_web.py  get_latest_wandb_run.py  init_session.sh  kill_training.sh  monitor_wandb.py  notify_discord.sh  train_remote.sh
src/mjlab_leggy/: __init__.py
src/mjlab_leggy/leggy/: __init__.py  config.json  keyboard_controller.py  leggy_actions.py  leggy_config.py  leggy_constants.py  leggy_curriculums.py  leggy_env.py  leggy_jump.py  leggy_observations.py  leggy_rewards.py  leggy_symmetry.py  leggy_terminations.py  robot.xml  sensors.xml
src/mjlab_leggy/tasks/: leggy.py  (+5 more)
tasks/: leggy_stand_up.py
viewer/: index.html  package-lock.json  package.json  vite.config.js
viewer/public/: policy.onnx  policy.onnx.data
viewer/src/: main.js  mujocoUtils.js  policyController.js
(+57 files in other folders)
